[gd_scene load_steps=8 format=2]

[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Orbitron-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=2]
size = 56
outline_size = 2
outline_color = Color( 0.298039, 0.419608, 0.313726, 1 )
extra_spacing_bottom = 3
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Orbitron-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=4]
size = 17
outline_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Orbitron-VariableFont_wght.ttf"

[sub_resource type="DynamicFont" id=6]
size = 15
font_data = SubResource( 5 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuName" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 12.0
margin_right = 512.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.560784, 0.866667, 0.784314, 1 )
text = "Games Of Life"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxSliders" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 292.0
margin_right = 930.0
margin_bottom = 804.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxSliders"]
margin_right = 900.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorizontalSizeLabel" type="Label" parent="VBoxSliders/VBoxContainer"]
margin_right = 900.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 4 )
text = "Horizontal Size"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorizontalSize" type="HSlider" parent="VBoxSliders/VBoxContainer"]
margin_top = 27.0
margin_right = 900.0
margin_bottom = 43.0
min_value = 64.0
max_value = 512.0
step = 2.0
value = 128.0
rounded = true
tick_count = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxSliders"]
margin_top = 129.0
margin_right = 900.0
margin_bottom = 257.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerticalSizeLabel" type="Label" parent="VBoxSliders/VBoxContainer2"]
margin_right = 900.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 4 )
text = "Vertical Size"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VerticalSize" type="HSlider" parent="VBoxSliders/VBoxContainer2"]
margin_top = 27.0
margin_right = 900.0
margin_bottom = 43.0
min_value = 64.0
max_value = 512.0
step = 2.0
value = 128.0
rounded = true
tick_count = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxSliders"]
margin_top = 257.0
margin_right = 900.0
margin_bottom = 385.0

[node name="EvolutionSpeedLabel" type="Label" parent="VBoxSliders/VBoxContainer3"]
margin_right = 900.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 4 )
text = "Evolution Speed"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EvolutionSpeed" type="HSlider" parent="VBoxSliders/VBoxContainer3"]
margin_top = 27.0
margin_right = 900.0
margin_bottom = 43.0
min_value = 5.0
step = 5.0
value = 10.0
rounded = true
tick_count = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer4" type="VBoxContainer" parent="VBoxSliders"]
margin_top = 385.0
margin_right = 900.0
margin_bottom = 513.0

[node name="ScopeLabel" type="Label" parent="VBoxSliders/VBoxContainer4"]
margin_right = 900.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 4 )
text = "Scope"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scope" type="HSlider" parent="VBoxSliders/VBoxContainer4"]
margin_top = 27.0
margin_right = 900.0
margin_bottom = 43.0
min_value = 1.0
max_value = 8.0
value = 2.0
rounded = true
tick_count = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 990.0
margin_top = 292.0
margin_right = 1890.0
margin_bottom = 804.0
custom_fonts/font = SubResource( 6 )
text = "Begin"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="VBoxSliders/VBoxContainer/HorizontalSize" to="." method="_on_HorizontalSize_value_changed"]
[connection signal="value_changed" from="VBoxSliders/VBoxContainer2/VerticalSize" to="." method="_on_VerticalSize_value_changed"]
[connection signal="value_changed" from="VBoxSliders/VBoxContainer3/EvolutionSpeed" to="." method="_on_EvolutionSpeed_value_changed"]
[connection signal="value_changed" from="VBoxSliders/VBoxContainer4/Scope" to="." method="_on_Scope_value_changed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
